--- a/apps/landing/business.html
+++ b/apps/landing/business.html
@@ -56,16 +56,16 @@
         <div class="container p-2">
           <header>
             <h1 class="title is-size-1">
-              Відкрийте супер силу своїх друзів та знайомих!
+              Відкрийте силу бізнесу через своїх друзів та знайомих!
             </h1>
             <h2 class="subtitle is-size-4 ">
-              Знаходьте товари та послуги, що вони пропонують (і навіть їхні друзі і товариші) та допомагайте друзям рекомендацією щодо авторів оголошень, яких ви знаєте
+              Будуйте довготривали ділові відносини крізь друзів та знайомих (і навіть їхніх друзів і товаришів) та знаходьте надійних партнерів з числа спільних контактів
             </h2>
           </header>
         </div>
 
         <!-- Header Section -->
-        <section class="hero is-link mt-6 mb-6 p-2">
+        <section class="hero is-info mt-6 mb-6 p-2">
           <div class="container">
             <div class="columns">
               <div class="column">
@@ -75,10 +75,10 @@
                   </h3>
                   <p class="block">
                     Ми зібрали найкраще від соцмереж та маркетплейсів в одній потужній платформі. 
-                    Стежте, що пропонують ваші друзі та знайомі.
-                    Обговорюйте оголошення з тими, хто знає автора напряму або через друзів.
+                    Розміщуйте пропозиції щодо товарів та послуг, які побачать ваші друзі та знайомі, їхні друзі та товариші і далі.
                   </p>
                   <p class="block">
+                    Відповідайте на запитання щодо кожного оголошення у груповому чаті людям, які приходять за персональною порадою ваших друзів.
                     Отримуйте та ділитеся значущими рекомендаціями.
                     Відкривайте нові можливості та будуйте тривалі ділові відносини.
                   </p>
@@ -111,19 +111,19 @@
             <div class="column is-4">
               <div class="has-text-centered">
                 <span class="has-text-danger"><i class="is-size-1 mb-6 fa fa-list-alt big-icon"></i></span>
-                <p class="is-size-4">Розміщуйте та переглядайте оголошення про будь-які товари чи послуги</p>
+                <p class="is-size-4">Розміщуйте оголошення про будь-які товари чи послуги, які побачать ваші друзі та знайомі та їх контакти. Ніякого масс-фоловингу, адже зв'язки між друзями вже присутні у контактних книгах телефонів</p>
               </div>
             </div>
             <div class="column is-4">
               <div class="has-text-centered">
                 <span class="has-text-success"><i class="is-size-1 mb-6 fa fa-users big-icon"></i></span>
-                <p class="is-size-4">Передивляйтесь оголошення від ваших друзів, їх друзів і навіть друзів їх друзів у своїй персоналізованій стрічці</p>
+                <p class="is-size-4">Замість того, щоб витрачати час та кошти на просування сторінки та порозуміння з алгоритмами ранжування, сконцентруйтеся на якості своїх товарів та послуг — а клієнтів приведуть ваші друзі</p>
               </div>
             </div>
             <div class="column is-4">
               <div class="has-text-centered">
                 <span class="has-text-link"><i class="is-size-1 mb-6 fa fa-handshake-o big-icon"></i></span>
-                <p class="is-size-4">Створюйте чати стосовно оголошень, які вас цікавлять, додаючи друзів, що нададуть рекомендацію про автора</p>
+                <p class="is-size-4">Робота з друзями — це відповідальний процес і може подекуди буде складним, але це найкращий шлях до побудови довготривалих ділових відносин, що будуть повертатися і приводити нових клієнтів</p>
               </div>
             </div>
           </div>
@@ -133,17 +133,17 @@
             <h3 class="title is-size-1 has-text-centered mt-6 mb-6">Як це працює?</h3>
             <div class="">
               <div class="has-text-info mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-download"></i> <span class="is-size-5 is-align-self-center has-text-black">Завантажте Рекаріо для iPhone чи Android</span></div>
-              <div class="has-text-link mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-envelope"></i> <span class="is-size-5 is-align-self-center has-text-black">Зареєструйтеся за декілька секунд, ми просто відправимо вам SMS</span></div>
+              <div class="has-text-link mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-envelope"></i> <span class="is-size-5 is-align-self-center has-text-black">Зареєструйтеся за декілька секунд, ми просто відправемо вам SMS</span></div>
               <div class="has-text-success mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-address-book"></i> <span class="is-size-5 is-align-self-center has-text-black">Дозвольте Рекаріо доступ до вашої контактної книги</span></div>
               <div class="has-text-warning mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-list-alt"></i> <span class="is-size-5 is-align-self-center has-text-black">Щойно Рекаріо проаналізує ваші телефонні контакти, ви побачите оголошення ваших друзів</span></div>
               <div class="has-text-danger mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-users"></i> <span class="is-size-5 is-align-self-center has-text-black">Також будуть доступні оголошення друзів ваших друзів, їхніх друзів і далі...</span></div>
-              <div class="has-text-primary mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-handshake-o"></i> <span class="is-size-5 is-align-self-center has-text-black">Коли ви зацікавитеся окремим оголошенням, ви зможете відкрити чат з одним з тих, хто знає автора, чи знає того хто знає автора</span></div>
+              <div class="has-text-primary mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-handshake-o"></i> <span class="is-size-5 is-align-self-center has-text-black">Коли ви зацікавитеся окремим оголошенням, ви можете відкрити чат з одним з тих, хто знає автора, чи знає того хто знає автора</span></div>
             </div>
           </div> 
         </section>
 
           <!-- Benefits of Personal Connections -->
-          <section class="hero is-link mt-6 mb-6 p-2">
+          <section class="hero is-info mt-6 mb-6 p-2">
             <div class="container">
               <h3 class="title is-size-1 has-text-centered mt-6 mb-6">Чому саме друзі та знайомі?</h3>
               <div class="columns">
