--- a/apps/landing/volunteer.html
+++ b/apps/landing/volunteer.html
@@ -56,16 +56,16 @@
         <div class="container p-2">
           <header>
             <h1 class="title is-size-1">
-              Відкрийте супер силу своїх друзів та знайомих!
+              Відкрий силу волонтерства через своїх друзів та знайомих!
             </h1>
             <h2 class="subtitle is-size-4 ">
-              Знаходьте товари та послуги, що вони пропонують (і навіть їхні друзі і товариші) та допомагайте друзям рекомендацією щодо авторів оголошень, яких ви знаєте
+              Знаходь товари і послуги, що пропонують ваші друзі та знайомі (і навіть їхні друзі і товариші) та допомагай друзям рекомендацією щодо авторів оголошень, яких ви знаєте
             </h2>
           </header>
         </div>
 
         <!-- Header Section -->
-        <section class="hero is-link mt-6 mb-6 p-2">
+        <section class="hero is-danger mt-6 mb-6 p-2">
           <div class="container">
             <div class="columns">
               <div class="column">
@@ -74,13 +74,17 @@
                     Рекаріо
                   </h3>
                   <p class="block">
-                    Ми зібрали найкраще від соцмереж та маркетплейсів в одній потужній платформі. 
-                    Стежте, що пропонують ваші друзі та знайомі.
-                    Обговорюйте оголошення з тими, хто знає автора напряму або через друзів.
+                    Ми зібрали найкраще від соцмереж та маркетплейсів в одній потужній платформі.
+                    Розміщуйте інформацію щодо зборів та заходів, які побачать ваші друзі та знайомі, їхні друзі та товариші і далі.
+                    Станьте особистим гарантом важливості та прозорості збору чи пошуку для своїх друзів, їхнії друзів та друзів їхніх приятелів.
                   </p>
                   <p class="block">
+                    Першими дізнавайтеся, коли вашим друзям необхідна якась допомога — чи то закрити важливий збір, чи знайти дефіцитний товар чи послугу.
+                    Побачивши збір, пошук товару чи послуги або інформацію щодо заходу — знайди, хто зі спільних знайомих може надати надійну рекомендацію.
+                  </p>
+                  <p class="block">
+                    Дізнавайся, хто з друзів та знайомих займається якою справою, аби мати на увазі, в чому вони можуть допомогти.
                     Отримуйте та ділитеся значущими рекомендаціями.
-                    Відкривайте нові можливості та будуйте тривалі ділові відносини.
                   </p>
                   <div class="buttons">
                     <a class="button is-link is-light" href="/ios">
@@ -133,17 +137,17 @@
             <h3 class="title is-size-1 has-text-centered mt-6 mb-6">Як це працює?</h3>
             <div class="">
               <div class="has-text-info mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-download"></i> <span class="is-size-5 is-align-self-center has-text-black">Завантажте Рекаріо для iPhone чи Android</span></div>
-              <div class="has-text-link mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-envelope"></i> <span class="is-size-5 is-align-self-center has-text-black">Зареєструйтеся за декілька секунд, ми просто відправимо вам SMS</span></div>
+              <div class="has-text-link mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-envelope"></i> <span class="is-size-5 is-align-self-center has-text-black">Зареєструйтеся за декілька секунд, ми просто відправемо вам SMS</span></div>
               <div class="has-text-success mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-address-book"></i> <span class="is-size-5 is-align-self-center has-text-black">Дозвольте Рекаріо доступ до вашої контактної книги</span></div>
               <div class="has-text-warning mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-list-alt"></i> <span class="is-size-5 is-align-self-center has-text-black">Щойно Рекаріо проаналізує ваші телефонні контакти, ви побачите оголошення ваших друзів</span></div>
               <div class="has-text-danger mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-users"></i> <span class="is-size-5 is-align-self-center has-text-black">Також будуть доступні оголошення друзів ваших друзів, їхніх друзів і далі...</span></div>
-              <div class="has-text-primary mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-handshake-o"></i> <span class="is-size-5 is-align-self-center has-text-black">Коли ви зацікавитеся окремим оголошенням, ви зможете відкрити чат з одним з тих, хто знає автора, чи знає того хто знає автора</span></div>
+              <div class="has-text-primary mb-4 is-flex"><i class="is-size-1 mr-4 fa fa-handshake-o"></i> <span class="is-size-5 is-align-self-center has-text-black">Коли ви зацікавитеся окремим оголошенням, ви можете відкрити чат з одним з тих, хто знає автора, чи знає того хто знає автора</span></div>
             </div>
           </div> 
         </section>
 
           <!-- Benefits of Personal Connections -->
-          <section class="hero is-link mt-6 mb-6 p-2">
+          <section class="hero is-danger mt-6 mb-6 p-2">
             <div class="container">
               <h3 class="title is-size-1 has-text-centered mt-6 mb-6">Чому саме друзі та знайомі?</h3>
               <div class="columns">
