Install Countly SDK

--- a/apps/landing/business.html
+++ b/apps/landing/business.html
@@ -26,6 +26,18 @@
     <style>
       body { font-family: "Trebuchet MS" }
     </style>
+
+    <!--Countly script-->
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/countly-sdk-web@latest/lib/countly.min.js'></script>
+    <script type='text/javascript'>
+
+      Countly.init({
+        app_key: "5e489a68ae8bc064044601de7d25dedb25a0afc2",
+        url: "https://recar.io"
+      });
+      Countly.track_sessions();
+      Countly.track_pageview();
+    </script>
   </head>
   <body class="">
     <nav class="navbar is-black has-shadow" role="navigation" aria-label="main navigation">
