--- a/apps/landing/go.html
+++ b/apps/landing/go.html
@@ -12,6 +12,17 @@
   a { color: #fff; text-decoration: none; width: 100%; height: 100%; bacground: red }
   img { text-align: center; width: 64; height: 64 }
 </style>
+<!--Countly script-->
+<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/countly-sdk-web@latest/lib/countly.min.js'></script>
+<script type='text/javascript'>
+
+  Countly.init({
+    app_key: "5e489a68ae8bc064044601de7d25dedb25a0afc2",
+    url: "https://global-countly.dev.viktorvsk.com"
+  });
+  Countly.track_sessions();
+  Countly.track_pageview();
+</script>
 </head>
 <body>
 <center>
