--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -35,7 +35,7 @@
 
       Countly.init({
         app_key: "5e489a68ae8bc064044601de7d25dedb25a0afc2",
-        url: "https://recar.io"
+        url: "https://global-countly.dev.viktorvsk.com"
       });
       Countly.track_sessions();
       Countly.track_pageview();
