--- a/apps/landing/go.html
+++ b/apps/landing/go.html
@@ -22,6 +22,14 @@
   });
   Countly.track_sessions();
   Countly.track_pageview();
+  Countly.track_sessions();
+  Countly.track_pageview();
+  Countly.track_clicks();
+  Countly.track_scrolls();
+  Countly.track_errors();
+  Countly.track_links();
+  Countly.track_forms();
+  Countly.collect_from_forms();
 </script>
 </head>
 <body>
