--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -26,9 +26,6 @@
     <style>
       body { font-family: "Trebuchet MS" }
     </style>
-
-
-
     <!--Countly script-->
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/countly-sdk-web@latest/lib/countly.min.js'></script>
     <script type='text/javascript'>
@@ -39,6 +36,14 @@
       });
       Countly.track_sessions();
       Countly.track_pageview();
+      Countly.track_sessions();
+      Countly.track_pageview();
+      Countly.track_clicks();
+      Countly.track_scrolls();
+      Countly.track_errors();
+      Countly.track_links();
+      Countly.track_forms();
+      Countly.collect_from_forms();
     </script>
 
   </head>
