--- a/apps/landing/go.html
+++ b/apps/landing/go.html
@@ -1,5 +1,5 @@
 <html><head>
-<title>Рекарио – Указатель</title>
+<title>Рекаріо | Меню</title>
 <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 <meta charset="utf-8">
 <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" rel="stylesheet">
